# donor-thank-you-agent

./: .gitignore  README.md  agent.py  compliance.py  gmail_client.py  pipeline.py  pyproject.toml  requirements.txt  test_smoke.py
data/: donations.csv
