[project]
name = "donor-thank-you-agent"
version = "0.1.0"
description = "Dedupe and aggregate donors, assign tiers, apply a pluggable compliance profile, and draft tone-matched thank-yous for human approval."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
